[package]
name = "rnr"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0", features = ["serde"] }
cron = "0"
futures-util = "0"
git-version = "0"
notify = "7"
rocket = { version = "0", features = [ "json" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
shell-words = "1"
tokio = { version = "1", features = ["full"] }
yaml-rust2 = "0"

[profile.release]
strip = true
