[package]
name = "rnr"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0"
axum = { version = "0", default-features = true, features = [ "macros" ] }
chrono = { version = "0", features = ["serde"] }
cron = "0"
futures = "0"
futures-util = "0"
git-version = "0"
notify = "7"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
shell-words = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = [ "fs" ] }
yaml-rust2 = "0"

[profile.release]
strip = true
